# simpler

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  readme.md
analysis/: main_flow.drawio.xml  (+1 more)
backend/: .gitignore  Cargo.toml  README.md  build.gradle  micronaut-cli.yml  settings.gradle
backend/src/: lib.rs  main.rs
backend/src/document/: matrix_html_output.rs  mod.rs  mps_html_output.rs  revised_simplex_html_output.rs  table_html_output.rs
backend/src/dto/: error.rs  manage.rs  mod.rs  mps.rs
backend/src/main/java/com/github/jakvitov/: Application.java
backend/src/main/resources/: application-dev.properties  application-prod.properties  application.properties  micronaut-banner.txt
backend/src/parsers/: cropped_mps_model_operations.rs  mod.rs  mps_parser.rs  parser_error.rs
backend/src/rationals/: mod.rs  rational.rs  rational_matrix.rs
backend/src/server/: catch_panic_layer.rs  layer_methods.rs  manage.rs  mod.rs  mps_verification.rs  primary_simplex_solver.rs
backend/src/solvers/: basic_simplex_solver.rs  basic_simplex_table_data.rs  basic_simplex_table_operations.rs  mod.rs  revised_simplex_solver.rs  simplex_error.rs  two_phase_simplex_solver.rs
backend/src/utils/: application_error.rs  mod.rs  tests.rs
backend/tests/: basic_simplex_to_html_output_from_mps_file_test.rs  mps_from_file_to_basic_simplex_table_in_output_flow.rs
backend/tests/data/mps/correct/: basic_simplex_two_iterations_mps  complicated_mps_with_multiple_rhs_objectives_and_bounds  simple_mps
backend/tests/data/mps/incorrect/: simple_mps_without_columns
frontend/: index.css  (+4 more)
(+328 files in other folders)
